--- a/android_fundamentals/AF02_2/app/src/main/res/layout/activity_main.xml
+++ b/android_fundamentals/AF02_2/app/src/main/res/layout/activity_main.xml
@@ -22,13 +22,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.94"
         app:srcCompat="@android:drawable/ic_input_add" />
-
-    <LinearLayout
-        android:id="@+id/cartList"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/cartList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
