--- a/android_fundamentals/AF02.2HomeWork/app/src/main/res/layout/activity_main.xml
+++ b/android_fundamentals/AF02.2HomeWork/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="COUNT"
+        android:onClick="incrimentCounter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
