--- a/android_fundamentals/AF04_5HomeWork/app/src/main/res/layout/activity_show_recipe.xml
+++ b/android_fundamentals/AF04_5HomeWork/app/src/main/res/layout/activity_show_recipe.xml
@@ -20,8 +20,8 @@
 
     <ImageView
         android:id="@+id/recipeImage"
-        android:layout_width="371dp"
-        android:layout_height="222dp"
+        android:layout_width="match_parent"
+        android:layout_height="244dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -34,25 +34,38 @@
         app:layout_constraintTop_toBottomOf="@+id/recipeTitle"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/recipeDescription"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="225dp"
+        android:layout_height="277dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:hint="【Ingredients for two】
-2 cups of fish stock
-1/3 pack of silk tofu, cut into 1/3-inch cubes
-2 tablespoons miso paste
-An adequate amount of fresh spinach, washed and chopped
-1/2 Chinese onion, thinly sliced
-A pinch of scallion"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recipeImage" />
+        app:layout_constraintTop_toBottomOf="@+id/recipeImage">
+
+        <TextView
+            android:id="@+id/recipeDescription"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:hint="【Ingredients for two】
+    2 cups of fish stock
+    1/3 pack of silk tofu, cut into 1/3-inch cubes
+    2 tablespoons miso paste
+    An adequate amount of fresh spinach, washed and chopped
+    1/2 Chinese onion, thinly sliced
+    A pinch of scallion"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recipeImage" />
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.constraint.ConstraintLayout>
