--- a/android_fundamentals/AF04_5HomeWork/app/src/main/res/values/styles.xml
+++ b/android_fundamentals/AF04_5HomeWork/app/src/main/res/values/styles.xml
@@ -15,4 +15,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="ActionBarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
